Bug 151350 - Spacing issue with Malayalam Sign Virama (U+0D4D) in Writer (part 2)
Summary: Spacing issue with Malayalam Sign Virama (U+0D4D) in Writer (part 2)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-10-05 08:07 UTC by Xisco Faulí
Modified: 2024-08-21 06:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison LibreOffie 7.3 and LibreOffice 7.5 master (71.22 KB, image/png)
2022-10-05 08:07 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-10-05 08:07:06 UTC
Created attachment 182838 [details]
Comparison LibreOffie 7.3 and LibreOffice 7.5 master

This is a follow-up of bug 150665 and it has to be tested with 
https://git.libreoffice.org/core/commit/29de4d6e1afcf2ad79056e4ad4403c3d4bdda4a0 included

Steps to reproduce:
1. Open attachment 182072 [details] from bug 150665

->  കോഴിക്കോട് has a space before the last character from the right. See Comparison image

reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: ca1fd7535770139044f7c1a9f7e59a082d710b6d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-10-05 08:08:48 UTC
Regression introduced by:

author	Khaled Hosny <khaled@aliftype.com>	2022-10-03 21:53:38 +0200
committer	خالد حسني <khaled@aliftype.com>	2022-10-04 14:10:53 +0200
commit 29de4d6e1afcf2ad79056e4ad4403c3d4bdda4a0 (patch)
tree abf96585bcdc46cf9dc52029d70db546d5dbec77
parent ee7f55d3aa84435fcbdab57e0c7603129157ad5d (diff)
tdf#150665: Fix justifying spacing marks

Bisected with: bibisect-linux64-7.5

Adding Cc: to Khaled Hosny
Comment 2 Khaled Hosny 2022-10-05 10:59:07 UTC
Investigating. It seems that the use of color is breaking something, if you clear the direct formatting and use the same font again the space goes away.
Comment 3 Commit Notification 2022-10-05 20:09:21 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/09c076c3f29c28497f162d3a5b7baab040725d56

tdf#151350: Fix extraneous gaps before marks

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.